created docker file and integrated everything with lambda and gateway, tested users/save path and post request works only on postman, still figuring out cors issue with frontend and its inability to save into database

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 .env
 .venv
+venv/
+.venv/
 backup.json
+__pycache__/
+__pycache__/*
+*.pyc
+*.pyo
+*.pyd
+
+# Ignore local IDE configurations
+.vscode/
+.idea/
+
+# Ignore OS-specific files
+.DS_Store
+ 
