--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@supabase/supabase-js": "^2.49.1",
     "next": "15.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
